--- a/GalaX/templates/base.html
+++ b/GalaX/templates/base.html
@@ -19,7 +19,7 @@
     <![endif]-->
     {% block css %}{% endblock %}
   </head>
-  <body>
+  <body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
     
         <nav class="navbar navbar-default">
         <div class="container-fluid">
