--- a/GalaX/login/templates/login/login.html
+++ b/GalaX/login/templates/login/login.html
@@ -1,4 +1,4 @@
-{% extends 'templates/base.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %}登录{% endblock %}
 {% block css %}<link href="{% static 'css/login.css' %}" rel="stylesheet"/>{% endblock %}
@@ -8,13 +8,14 @@
     <div class="container">
         <div class="col-md-4 col-md-offset-4">
           <form class='form-login' action="/login/" method="post">
-              <h2 class="text-center">欢迎登录</h2>
+            {% csrf_token %}
+              <h2 class="text-center" style="color:floralwhite">欢迎登录</h2>
               <div class="form-group">
-                <label for="id_username">用户名：</label>
+                <label for="id_username" style="color:floralwhite">用户名：</label>
                 <input type="text" name='username' class="form-control" id="id_username" placeholder="Username" autofocus required>
               </div>
               <div class="form-group">
-                <label for="id_password">密码：</label>
+                <label for="id_password" style="color:floralwhite">密码：</label>
                 <input type="password" name='password' class="form-control" id="id_password" placeholder="Password" required>
               </div>
               <button type="reset" class="btn btn-default pull-left">重置</button>
