--- a/GalaX/map/templates/map/map_base.html
+++ b/GalaX/map/templates/map/map_base.html
@@ -5,13 +5,41 @@
 {% endblock %}
 
 {% block css %}
-    {% include 'map/components/baidu_map_head.html' %}
+    {% include 'map/components/map_block_head.html' %}
 {% endblock %}
 
 {% block content %}
 <body>
 
-    {% include 'map/components/baidu_map.html' %}
+    <!--
+        all_blocks = left_blocks[upper: map, lower: recommendation]
+                    &right_blocks[info]
+    -->
+    <div class="row" id="all_blocks">
+        <div class="col-md-9" id="left_blocks">
+
+            <div id="map_block">
+                {% include 'map/components/map_block.html' %}
+            </div>
+
+            <div id="recom_block">
+                <h1>Recommendations</h1>
+            </div>
+
+        </div>
+
+        <div class="col-md-3" id="right_blocks">
+            <div id="info_block">
+                <h1>Information</h1>
+            </div>
+
+        </div>
+    </div>
+
+    <!--styles-->
+    <style type="text/css">
+        #map_block{padding: 10px}
+    </style>
 
 </body>
 {% endblock %}
