--- a/GalaX/login/templates/login/register.html
+++ b/GalaX/login/templates/login/register.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block title %}注册{% endblock %}
 {% block content %}
-
+<script type="text/javascript" src="{% static 'js/jquery-3.3.1.js' %}"></script>
 <body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
     <div class="container">
         <div class="col-md-4 col-md-offset-4">
@@ -49,7 +49,16 @@
               <button type="submit" class="btn btn-primary pull-right">提交</button>
 
           </form>
+
         </div>
     </div> <!-- /container -->
-
+    
+    <script>
+    $('.captcha').click(function () {
+        $.getJSON("/captcha/refresh/", function (result) {
+            $('.captcha').attr('src', result['image_url']);
+            $('#id_captcha_0').val(result['key'])
+        });
+    });
+    </script>
 {% endblock %}
