--- a/GalaX/login/templates/login/login.html
+++ b/GalaX/login/templates/login/login.html
@@ -29,18 +29,20 @@
               </div>
                -->
                 <div class="form-group">
-                    {{ login_form.username.label_tag }}
+                    {{ login_form.username.errors }}
+                    <label for="{{ login_form.username.id_for_label }}" style="color:floralwhite">用户名:</label>
                     {{ login_form.username}}
                 </div>
                 <div class="form-group">
-                    {{ login_form.password.label_tag }}
+                        {{ login_form.password.errors }}
+                        <label for="{{ login_form.password.id_for_label }}" style="color:floralwhite">密码:</label>
                     {{ login_form.password }}
                 </div>
                 <div class="form-group">
                     {{ login_form.captcha.errors }}
-                    {{ login_form.captcha.label_tag }}
+                    <label for="{{ login_form.captcha.id_for_label }}" style="color:floralwhite">验证码:</label>
                     {{ login_form.captcha }}
-                </div>
+                   </div>
 
                 <button type="reset" class="btn btn-default pull-left">重置</button>
                 <button type="submit" class="btn btn-primary pull-right">提交</button>
