--- a/GalaX/login/templates/login/register.html
+++ b/GalaX/login/templates/login/register.html
@@ -2,10 +2,18 @@
 {% load staticfiles %}
 {% block title %}注册{% endblock %}
 {% block content %}
+<style>
+    .errorlist {
+        color: red;
+    }
+</style>
 <script type="text/javascript" src="{% static 'js/jquery-3.3.1.js' %}"></script>
+<link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
 <body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
-    <div class="container">
-        <div class="col-md-4 col-md-offset-4">
+    <div class="flex-center">
+        <div class="container">
+            <div class="flex-center">
+                <div class="unit-1-2 unit-1-on-mobile">
           <form class='form-register' action="/register/" method="post">
 
               {% if message %}
@@ -14,34 +22,41 @@
 
               {% csrf_token %}
 
-              <h2 class="text-center">欢迎注册</h2>
+              <h2 class="text-center" style="color:floralwhite">欢迎注册</h2>
               <div class="form-group">
-                  {{ register_form.username.label_tag }}
+                    {{ register_form.username.errors }}
+                    <label for="{{ register_form.username.id_for_label }}" style="color:floralwhite">用户名:</label>
                   {{ register_form.username}}
               </div>
               <div class="form-group">
-                  {{ register_form.password1.label_tag }}
+                    {{ register_form.password1.errors }}
+                    <label for="{{ register_form.password1.id_for_label }}" style="color:floralwhite">密码：</label>
                   {{ register_form.password1 }}
               </div>
               <div class="form-group">
-                  {{ register_form.password2.label_tag }}
+                    {{ register_form.password2.errors }}
+                    <label for="{{ register_form.password2.id_for_label }}" style="color:floralwhite">再次输入：</label>
                   {{ register_form.password2 }}
               </div>
               <div class="form-group">
-                  {{ register_form.email.label_tag }}
+                    {{ register_form.email.errors }}
+                    <label for="{{ register_form.email.id_for_label }}" style="color:floralwhite">邮箱：</label>
                   {{ register_form.email }}
               </div>
               <div class="form-group">
-                    {{ register_form.phone_number.label_tag }}
+                    {{ register_form.phone_number.errors }}
+                    <label for="{{ register_form.phone_number.id_for_label }}" style="color:floralwhite">电话号码：</label>
                     {{ register_form.phone_number }}
                 </div>
               <div class="form-group">
-                  {{ register_form.sex.label_tag }}
+                    {{ register_form.sex.errors }}
+                    <label for="{{ register_form.sex.id_for_label }}" style="color:floralwhite">性别：</label>
                   {{ register_form.sex }}
               </div>
+              
               <div class="form-group">
                   {{ register_form.captcha.errors }}
-                  {{ register_form.captcha.label_tag }}
+                  <label for="{{ register_form.captcha.id_for_label }}" style="color:floralwhite">验证码：</label>
                   {{ register_form.captcha }}
               </div>
 
@@ -51,8 +66,10 @@
           </form>
 
         </div>
-    </div> <!-- /container -->
-    
+    </div>
+</div>
+</div> <!-- /container -->
+
     <script>
     $('.captcha').click(function () {
         $.getJSON("/captcha/refresh/", function (result) {
