--- a/GalaX/login/templates/login/register.html
+++ b/GalaX/login/templates/login/register.html
@@ -27,6 +27,9 @@
                     {{ register_form.username.errors }}
                     <label for="{{ register_form.username.id_for_label }}" style="color:floralwhite">用户名:</label>
                   {{ register_form.username}}
+                  {% if register_form.username.help_text %}
+                  <p class="help text-small text-muted">{{ register_form.username.help_text|safe }}</p>
+                  {% endif %}
               </div>
               <div class="form-group">
                     {{ register_form.password1.errors }}
