--- a/GalaX/templates/base.html
+++ b/GalaX/templates/base.html
@@ -66,7 +66,8 @@
       <!-- log in or loging -->
       <ul class="nav navbar-nav navbar-right">
           {% if request.session.is_login %}
-          <li><a href="#">当前在线：{{ request.session.user_name }}</a></li>
+          <li><a href="#">欢迎您：{{ request.session.user_name }}</a></li>
+          <li><a href="/passchg/">修改密码</a></li>
           <li><a href="/logout/">登出</a></li>
       {% else %}
           <li><a href="/login/">登录</a></li>
