--- a/GalaX/map/templates/map/components/map_block.html
+++ b/GalaX/map/templates/map/components/map_block.html
@@ -1,6 +1,6 @@
 <div id="map_block_card">
     <div id="map_block_card_body">
-        {% include 'map/components/maps/baidu_map.html' %}
+        {% include 'map/baidu_map/baidu_map.html' %}
     </div>
 </div>
 
