--- a/GalaX/map/templates/map/components/map_block_head.html
+++ b/GalaX/map/templates/map/components/map_block_head.html
@@ -1,1 +1,6 @@
+{% load staticfiles %}
+
 {% include 'map/baidu_map/baidu_map_head.html' %}
+
+<!-- map block dynamic -->
+<script src="{% static 'map/js/map_block_dynamic.js' %}" type="module"></script>
