--- a/GalaX/map/templates/map/baidu_map/baidu_map.html
+++ b/GalaX/map/templates/map/baidu_map/baidu_map.html
@@ -1,11 +1,4 @@
-{% load staticfiles %}
-
 <!--map itself-->
-<!--TODO: container is unique!-->
-<div id="container"></div>
+<!-- TODO: "container" ID taken -->
+<div id="container" style="height: 100%"></div>
 
-<!--map generation-->
-<script src="{% static 'map/js/generation.js' %}" type="module"></script>
-
-<!--map event marking-->
-<script src="{% static 'map/js/marker.js' %}" type="module"></script>
