Info block finished
1. IMPORTANT: add dependency: pillow=5.4.1;
2. info block finish;
3. IMPORTANT: data model Event created:
{
id = models.AutoField(primary_key=True)
    name = models.CharField(max_length=50)
    image = models.ImageField()
    summary = models.CharField(max_length=50)
    content = models.CharField(max_length=2000)
    lng = models.DecimalField(db_index=True, max_digits=9, decimal_places=6)
    lat = models.DecimalField(db_index=True, max_digits=9, decimal_places=6)
}
4. IMPORTANT: post position [lng, lat] to get nearby events in url: map/nearby
5. slight change to base.html: static reference to bootstrap.min.js

--- a/GalaX/map/templates/map/components/map_block_head.html
+++ b/GalaX/map/templates/map/components/map_block_head.html
@@ -2,5 +2,4 @@
 
 {% include 'map/baidu_map/baidu_map_head.html' %}
 
-<!-- map block dynamic -->
-<script src="{% static 'map/js/map_block_dynamic.js' %}" type="module"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'map/css/map_block.css' %}">
