--- a/GalaX/map/static/map/css/my_fade.css
+++ b/GalaX/map/static/map/css/my_fade.css
@@ -1,6 +1,20 @@
 .my_fade {
-    -webkit-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-    -moz-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-    -o-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-    transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    -webkit-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    -moz-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    -o-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+}
+
+.map_block_dynamic_fade {
+    -webkit-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    -moz-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    -o-transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+}
+
+.map_block_dynamic {
+    -webkit-transition: width 0s ease-in-out, height 0s ease-in-out, opacity 0s ease-in-out, visibility 0s ease-in-out, box-shadow 0s ease-in-out;
+    -moz-transition: width 0s ease-in-out, height 0s ease-in-out, opacity 0s ease-in-out, visibility 0s ease-in-out, box-shadow 0s ease-in-out;
+    -o-transition: width 0s ease-in-out, height 0s ease-in-out, opacity 0s ease-in-out, visibility 0s ease-in-out, box-shadow 0s ease-in-out;
+    transition: width 0s ease-in-out, height 0s ease-in-out, opacity 0s ease-in-out, visibility 0s ease-in-out, box-shadow 0s ease-in-out;
 }
