--- a/GalaX/map/templates/map/baidu_map/baidu_map_head.html
+++ b/GalaX/map/templates/map/baidu_map/baidu_map_head.html
@@ -10,7 +10,7 @@
 </script>
 
 <!--map generation-->
-<script src="{% static 'map/js/generation.js' %}" type="module"></script>
+<script src="{% static 'map/js/baidu_map/generation.js' %}" type="module"></script>
 
 <!--map event marking-->
-<script src="{% static 'map/js/marker.js' %}" type="module"></script>
+<script src="{% static 'map/js/baidu_map/marker.js' %}" type="module"></script>
