--- a/GalaX/map/templates/map/components/info_block.html
+++ b/GalaX/map/templates/map/components/info_block.html
@@ -1,3 +1,11 @@
-<div class="my_card" style="height: 100%">
-    Information
+<div class="my_card map_block_dynamic" style="height: 100%; padding: 5%">
+    <canvas id="info_image" class="map_block_dynamic" style="height: 30%;">
+        Image
+    </canvas>
+    <div id="info_summary" class="map_block_dynamic" style="height: 20%; padding: 5%">
+        Summary
+    </div>
+    <div id="info_content" class="map_block_dynamic" style="height: 50%; padding: 5%; overflow-y: scroll;">
+        Content
+    </div>
 </div>
