登陆后改密码

--- a/GalaX/login/templates/login/confirm.html
+++ b/GalaX/login/templates/login/confirm.html
@@ -4,9 +4,9 @@
 {% block content %}
 <body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
     <div class="row">
-        <h1 class="text-center">{{ message }}</h1>
+        <h1 class="text-center" style="color:floralwhite">{{ message }}</h1>
     </div>
     <script>
-        window.setTimeout("window.location='/login/'",2000);
+        window.setTimeout("window.location='/login/'",4000);
     </script>
 {% endblock %}
