--- a/GalaX/login/templates/login/passchg.html
+++ b/GalaX/login/templates/login/passchg.html
@@ -2,7 +2,6 @@
 {% load staticfiles %}
 
 {% block title %}修改密码{% endblock %}
-{% block css %}
 <script type="text/javascript" src="{% static 'js/jquery-3.3.1.js' %}"></script>
 <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
 <style>
@@ -15,39 +14,32 @@
 <body style="background-image: url({% static 'image/galax4.jpg' %});background-size:100%;">
     <div class="container">
         <div class="col-md-4 col-md-offset-4">
-            <form class='form-login' action="/login/" method="post">
+            <form class='form-passchg' action="/passchg/" method="post">
                 {% if message %}
                 <div class="alert alert-warning">{{ message }}</div>
                 {% endif %}
                 {% csrf_token %}
-                <h2 class="text-center" style="color:floralwhite">欢迎登录</h2>
+                <h2 class="text-center" style="color:floralwhite">修改密码</h2>
                 <div class="form-group">
-                    {{ login_form.username.errors }}
-                    <label for="{{ login_form.username.id_for_label }}" style="color:floralwhite">用户名:</label>
-                    {{ login_form.username}}
+                    {{ passchg_form.password0.errors }}
+                    <label for="{{ passchg_form.password0.id_for_label }}" style="color:floralwhite">原密码</label>
+                    {{ passchg_form.password0}}
                 </div>
                 <div class="form-group">
-                    {{ login_form.password.errors }}
-                    <label for="{{ login_form.password.id_for_label }}" style="color:floralwhite">密码:</label>
-                    {{ login_form.password }}
+                    {{ passchg_form.password1.errors }}
+                    <label for="{{ passchg_form.password1.id_for_label }}" style="color:floralwhite">新密码:</label>
+                    {{ passchg_form.password1 }}
                 </div>
                 <div class="form-group">
-                    {{ login_form.captcha.errors }}
-                    <label for="{{ login_form.captcha.id_for_label }}" style="color:floralwhite">验证码:</label>
-                    {{ login_form.captcha }}
+                    {{ passchg_form.password2.errors }}
+                    <label for="{{ passchg_form.password2.id_for_label }}" style="color:floralwhite">再次确认密码:</label>
+                    {{ passchg_form.password2 }}
                 </div>
+
 
                 <button type="reset" class="btn btn-default pull-left">重置</button>
                 <button type="submit" class="btn btn-primary pull-right">提交</button>
             </form>
         </div>
     </div> <!-- /container -->
-    <script>
-        $('.captcha').click(function () {
-            $.getJSON("/captcha/refresh/", function (result) {
-                $('.captcha').attr('src', result['image_url']);
-                $('#id_captcha_0').val(result['key'])
-            });
-        });
-    </script>
     {% endblock %}
