--- a/GalaX/map/templates/map/components/recom_block.html
+++ b/GalaX/map/templates/map/components/recom_block.html
@@ -1,4 +1,8 @@
-<div class="my_card" style="height: 100%">
-    Recommendations
+<div id='recom_events' class="my_static_card scrolling-wrapper" style="height: 100%">
+    <!-- 
+        Recommendations:
+        <canvas title="${event.name}" id="${canvasId}" class="btn recom_page card my_card" style="height: 100%;">
+        </canvas>
+    -->             
 </div>
 
