--- a/GalaX/login/templates/login/login.html
+++ b/GalaX/login/templates/login/login.html
@@ -36,6 +36,10 @@
                     {{ login_form.captcha }}
                 </div>
 
+                <a class="pull-left" href="/register/" >注册</a>
+                <a class="pull-right" href="/password_lost/">忘记密码？</a>
+            
+            <br>
                 <button type="reset" class="btn btn-default pull-left">重置</button>
                 <button type="submit" class="btn btn-primary pull-right">提交</button>
             </form>
