--- a/GalaX/templates/base.html
+++ b/GalaX/templates/base.html
@@ -98,6 +98,9 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{% static 'js/bootstrap.min.js'%}"></script>
 </body>
+{% block extra_footer %}
+
+{% endblock %}
 
 </html>
 {% endautoescape %}
