--- a/GalaX/login/templates/login/confirm.html
+++ b/GalaX/login/templates/login/confirm.html
@@ -4,7 +4,8 @@
 {% block content %}
 <body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
     <div class="row">
-        <h1 class="text-center" style="color:floralwhite">{{ message }}</h1>
+        <center></center><h1 class="text-center" style="color:floralwhite">{{ message }}</h1> 
+        <br>如果长时间没有跳转，可以点此跳转</a></center>
     </div>
     <script>
         window.setTimeout("window.location='/login/'",4000);
