--- a/GalaX/login/templates/login/login.html
+++ b/GalaX/login/templates/login/login.html
@@ -1,49 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'login/logintemplate.html' %}
 {% load staticfiles %}
 
-{% block title %}登录{% endblock %}
-{% block css %}
-<script type="text/javascript" src="{% static 'js/jquery-3.3.1.js' %}"></script>
-<link href="{% static 'css/login.css' %}" rel="stylesheet" />
+{% block title %}登陆{% endblock %}
 
+
+
+{% block form %}
+{% include 'login/loginform.html' %}
 {% endblock %}
-
-
-{% block content %}
-
-<body style="background-image: url({% static 'image/galax6.jpg' %});background-size:100%;">
-    <div class="container">
-        <div class="col-md-4 col-md-offset-4">
-            <form class='form-login' action="/login/" method="post">
-                {% if message %}
-                <div class="alert alert-warning">{{ message }}</div>
-                {% endif %}
-                {% csrf_token %}
-                <h2 class="text-center" style="color:floralwhite">欢迎登录</h2>
-                <div class="form-group">
-                    {{ login_form.username.errors }}
-                    <label for="{{ login_form.username.id_for_label }}" style="color:floralwhite">用户名:</label>
-                    {{ login_form.username}}
-                </div>
-                <div class="form-group">
-                    {{ login_form.password.errors }}
-                    <label for="{{ login_form.password.id_for_label }}" style="color:floralwhite">密码:</label>
-                    {{ login_form.password }}
-                </div>
-                <div class="form-group">
-                    {{ login_form.captcha.errors }}
-                    <label for="{{ login_form.captcha.id_for_label }}" style="color:floralwhite">验证码:</label>
-                    {{ login_form.captcha }}
-                </div>
-
-                <a class="pull-left" href="/register/" >注册</a>
-                <a class="pull-right" href="/password_lost/">忘记密码？</a>
-            
-            <br>
-                <button type="reset" class="btn btn-default pull-left">重置</button>
-                <button type="submit" class="btn btn-primary pull-right">提交</button>
-            </form>
-        </div>
-    </div> <!-- /container -->
-    <script type="text/javascript" src="{% static 'login/js/CapchaFresh.js' %}"></script>
-    {% endblock %}
