--- a/GalaX/templates/base.html
+++ b/GalaX/templates/base.html
@@ -13,7 +13,7 @@
 
   <!-- Bootstrap -->
   <link href="{% static 'bootstrap-4.3.1-dist/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js' %}" rel="stylesheet">
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -33,7 +33,9 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js'%}"></script>
-
+<!-- 引入脚本 -->
+{% block jsScript %}
+{% endblock %}
 </body>
 
 </html>
