--- a/GalaX/templates/footer.html
+++ b/GalaX/templates/footer.html
@@ -3,8 +3,9 @@
 <div>
     <br><br><br>
 </div>
-<footer class="py-3 bg-light fixed-bottom">
-    <div class="container">
-        <p class="m-0 text-center text-grey">Copyright &copy; galax 2018</p>
-    </div>
-</footer>
+
+<footer class="bg-light py-5">
+        <div class="container">
+          <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+        </div>
+      </footer>
