--- a/GalaX/login/templates/login/test.html
+++ b/GalaX/login/templates/login/test.html
@@ -16,51 +16,40 @@
 {% block content %}
 
     {#通用表单页面#}
-    <div>
-            <br><br><br>
-        </div>
-    <div class="row align-items-center">
     <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card login-form-2 my-5">
-          <div class="card-body">
-                <form class="main_form" method='post' action="/password_lost/">
-                    <h3 class="text-center">{{form_title}}</h3>
-                    
-                        {%csrf_token%}
-                        <div class="form-group">
-                        {% for field in form %}
-                        {# 区分是否是hidden字段 #}
-                        {% if field.is_hidden %}
+        <div class="col-md-4 col-md-offset-4">
+            <div id="panel_form" class="panel panel-default">
+            <div class="panel-body">
+            <h3 class="form_title">{{form_title}}</h3>
+            <form class="main_form" method='post' action="/password_lost/">
+                {%csrf_token%}
+                {% for field in form %}
+                    {# 区分是否是hidden字段 #}
+                    {% if field.is_hidden %}
                         {{ field }}
-                        {% else %}
-                       
+                    {% else %}
+                        <div class="input-group">
                             <label class="input-group-addon" for="{{ field.id_for_label }}">
                                 {{ field.label }}
                             </label>
                             {{ field }}
-                        
+                        </div>
                         {# 错误提示信息 #}
                         <p class="text-danger text-right">
                             {{ field.errors.as_text }}
                         </p>
-                        {%endif%}
-                        {%endfor%}
-                    </div>
-                        <div class="text-right form_btn">
-                            <a class="btn btn-primary" id="btn_code">获取验证码</a>
-                            <input class="btn btn-primary" id="btn_submit" type="submit" value="{{submit_name}}" />
-                        </div>
-                </form>
-            
-          </div>
+                    {%endif%}
+                {%endfor%}
+ 
+                <div class="text-right form_btn">
+                    <a class="btn btn-primary" id="btn_code">获取验证码</a>
+                    <input class="btn btn-primary" id="btn_submit" type="submit" value="{{submit_name}}"/>
+                </div>
+            </form>
+            </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
-
     {#获取验证码#}
     <script type="text/javascript">
         //时间不到不能点击
@@ -101,13 +90,13 @@
                             //提示
                             var code_tip = $(".text-danger")[3];
                             code_tip.innerText = '已经发送验证码到您填写的邮箱中'
-                            alert('发送成功，请检查邮箱！');
+    
                             //禁用按钮
                             $("#btn_code").addClass("disabled");
                             //倒计时
                             time_run(60);
                         }else{
-                            alert('邮箱不存在！');
+                            alert('正在尝试发送ing...');
                         }
                     },
                     error:function(XMLHttpRequest, textStatus, errorThrown){
