--- a/GalaX/templates/base.html
+++ b/GalaX/templates/base.html
@@ -20,87 +20,23 @@
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  {% block css %}{% endblock %}
+  {% block css %}
+  {% endblock %}
 </head>
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">切换导航条</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-
-    <!-- 主页 button -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/index/">主页</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <!-- dropdown-menu(not use) -->
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <!-- search bar -->
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <!-- log in or loging -->
-      <ul class="nav navbar-nav navbar-right">
-        {% if request.session.is_login %}
-        <li><a href="#">欢迎您：{{ request.session.user_name }}</a></li>
-        <li><a href="/passchg/">修改密码</a></li>
-        <li><a href="/logout/">登出</a></li>
-        {% else %}
-        <li><a href="/login/">登录</a></li>
-        <li><a href="/register/">注册</a></li>
-        {% endif %}
-        <!-- information -->
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-            aria-expanded="false">个人信息 <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
+<!-- 引入导航 -->
+{% include 'nav.html' %}
+<!-- 引入内容 -->
 {% block content %}{% endblock %}
+<!-- 引入注脚 -->
+{% include 'footer.html' %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.min.js'%}"></script>
-</body>
-{% block extra_footer %}
-
+<!-- 引入脚本 -->
+{% block jsScript %}
 {% endblock %}
+</body>
 
 </html>
 {% endautoescape %}
